        - Ahora no se muestran correlativas en materias de 1ro
        - Si estas en una materia de 3ro, al agregar correlativas solo podras ver materias de 1ro y 2do
        - Al crear una asignatura se agregaba mal el año
        - Ahora se comprueba que la carrera a la cual se agrega la asignatura exista
    - Mesas
        - Ahora al obtener errores creando una mesa, no se pierde la informacion que habia sido ingresada
    - Carreras
        - Las carreras ahora son vigentes por defecto al crearlas
        - En carreras recien creadas, daba error al entrar Admin/carreras
        - Ya no se muestra el campo "observaciones" en la tabla de carreras
    - Alumnos
        - en la re/matriculacion ahora si muestra las correlativas que debe el alumno
    - Otros
        - Cambios internos (Refactorizacion, Requests)

- Alumnos
    - Examenes
        - Ahora alumnos/examenes muestra la fecha de examen en formato dd-mm-yyyy (sin hora) 
    - Otros
        - Cambios internos (Controladores para inscripciones y rematriculacion)


--------------------------------------------------------------
8 de noviembre
--------------------------------------------------------------
- Admin
    - Mesas
        - Validaciones al editar.
    - config
        - Ahora incluye una desincripcion para cada una de las opciones de configuracion.
        

- Alumnos
    - rematriculacion
        - Se registraba mal la condicion de la cursada.
        - No te podias bajar si elegias libre.
    - general
        - Ya se puede usar $alumno->iniciales() y $alumno->primerNombre().
            recordar que auth()->user() es lo mismo que $alumno.
    - Carreras/Cursadas
        - Opcion de exportar cursadas directamente desde la tabla principal de Carreras.
    - Cursadas
        - Luego de eliminar se redirigia a la misma cursada la cual ya no existe por lo que se obtenia un 404.
        
- profesores
    - Ahora tienen botones para imprimir los 3 tipos de acta volante.